--- a/src/app/components/communication/communication.component.html
+++ b/src/app/components/communication/communication.component.html
@@ -1,9 +1,10 @@
 <section>
   <div class="container">
     <div class="content">
-      <a routerLink="leaflets">
+      <a (click)="setTitle('ADCreativ - Plaquettes')"
+      routerLink="leaflets">
         <div class="content-overlay"></div>
-        <img class="content-image" src="https://images.unsplash.com/photo-1433360405326-e50f909805b3?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=359e8e12304ffa04a38627a157fc3362">
+        <img class="content-image" src="assets/images/plaquette/Chabanon.jpg" alt="Plaquette du domaine Alain Chabanon">
         <div class="content-details fadeIn-bottom fadeIn-left">
           <h4 class="content-title">Plaquettes</h4>
         </div>
