--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,9 +7,7 @@
   <br>
     <small class="text-muted">Designer packaging et communication</small>
   </h1>
-  <div class="sidebar">
-    <a routerLink="sidebar"></a><img src="assets\images\sidebaricon.png" alt="Sidebar icon">
-  </div>
+    <img src="assets\images\sidebaricon.png" alt="Sidebar icon">
 </div>
   <div class="nav">
     <app-nav></app-nav>
