--- a/src/app/components/packaging/packaging.component.html
+++ b/src/app/components/packaging/packaging.component.html
@@ -14,7 +14,8 @@
   
   <div class="container">
     <div class="content">
-      <a routerLink="cardboardPack">
+      <a (click)="setTitle('ADCreativ - Cartons')" 
+      routerLink="cardboardPack">
         <div class="content-overlay"></div>
         <img class="content-image" src="https://images.unsplash.com/photo-1433360405326-e50f909805b3?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=359e8e12304ffa04a38627a157fc3362">
         <div class="content-details fadeIn-bottom fadeIn-left">
@@ -26,7 +27,8 @@
   
   <div class="container">
     <div class="content">
-      <a routerLink="boxes">
+      <a (click)="setTitle('ADCreativ - Bibs')"
+      routerLink="boxes">
         <div class="content-overlay"></div>
         <img class="content-image" src="assets/images/bib/col_du_vent_bib.jpg" Alt="Col du Vent">
         <div class="content-details fadeIn-bottom fadeIn-left">
@@ -38,7 +40,8 @@
   
   <div class="container">
     <div class="content">
-      <a routerLink="oliveOil">
+      <a (click)="setTitle('ADCreativ - Huile d\'olive')"
+      routerLink="oliveOil">
         <div class="content-overlay"></div>
         <img class="content-image" src="https://images.unsplash.com/photo-1433360405326-e50f909805b3?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=359e8e12304ffa04a38627a157fc3362">
         <div class="content-details fadeIn-bottom fadeIn-left">
