--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
-<a routerLink="legalNotice"><p>Mentions légales</p></a>
+<a routerLink="legalNotice">Mentions légales</a>
 <img id="facebook" src="assets/images/facebook.svg" alt="Facebook icon">
 <img id="instagram" src="assets/images/instagram.svg" alt="Instagram icon">
 </footer>
