--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,8 +2,10 @@ ng-sidebar-container {
     height: 100vh;
 }
 
+.sidebarIcon {
+    cursor: pointer;
+    float: right;
+    margin-top: 50px;
+}
 
-.ng-sidebar--opened.ng-sidebar--over {
-    box-shadow: 0 0 2.5em rgba(85, 85, 85, 0.5);
-  }
 
