--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+
+.ng-sidebar--opened.ng-sidebar--over {
+    box-shadow: 0 0 2.5em rgba(85, 85, 85, 0.5);
+  }
+
+.ng-sidebar--right {
+    color: black !important;
+    opacity: 90%;
+    background: #333333;
+    width: 16rem;
+
+    ul {
+        text-align: center;
+        vertical-align: middle;
+        font-family: Arial, Helvetica, sans-serif;
+
+        a {
+            color: black;
+            font-size: 20px;
+        }
+        
+        a:hover {
+            text-decoration: none;
+            color: white;
+        }
+    }
+}
