--- a/src/app/components/legal-notice/legal-notice.component.html
+++ b/src/app/components/legal-notice/legal-notice.component.html
@@ -1,3 +1,6 @@
-<p>
-  legal-notice works!
-</p>
+<h2>AD-Creativ</h2>
+
+<p>Responsable : Alexandra Diaz</p>
+<p>Adresse : 30, rue des Crocus - 34070 Montpellier</p>
+<p>Tél : 06 64 93 77 10</p>
+<p>Email : alexandra@ad-creativ.com</p>
