--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
+body {
+    background: #100c08;
+}
+
 .ng-sidebar--opened.ng-sidebar--over {
     box-shadow: 0 0 2.5em rgba(85, 85, 85, 0.5);
   }
@@ -9,11 +13,14 @@
     opacity: 90%;
     background: #333333;
     width: 16rem;
+    display: grid;
 
     ul {
+        align-items: center;
         text-align: center;
-        vertical-align: middle;
+        line-height: 50px;
         font-family: Arial, Helvetica, sans-serif;
+        height: 100%;
 
         a {
             color: black;
