ajout contenu page bouteille, 404, reglage taille formulaire

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,12 +27,12 @@
     </button>
 
     <ul class="nav flex-column">
-      <li class="nav-item"><a (click)="setTitle('ADCreativ - Qui suis-je?')" 
-        routerLink="aboutMe">Qui suis-je?</a></li>
-      <li class="nav-item"><a (click)="setTitle('ADCreativ - Références')" 
-        routerLink="clients">Références</a></li>
-      <li class="nav-item"><a (click)="setTitle('ADCreativ - Contact')" 
-        routerLink="contact">Contact</a></li>
+      <li class="nav-item"><p (click)="setTitle('ADCreativ - Qui suis-je?')" 
+        routerLink="aboutMe">Qui suis-je?</p></li>
+      <li class="nav-item"><p (click)="setTitle('ADCreativ - Références')" 
+        routerLink="clients">Références</p></li>
+      <li class="nav-item"><p (click)="setTitle('ADCreativ - Contact')" 
+        routerLink="contact">Contact</p></li>
     </ul>
 
         
