--- a/src/app/components/packaging/bottles/bottles.component.html
+++ b/src/app/components/packaging/bottles/bottles.component.html
@@ -1,3 +1,9 @@
-<p>
-  bottles works!
-</p>
+<h3>Création d'étiquettes de vin</h3>
+
+<h5>Castelbarry</h5>
+
+<p>Conception de la charte graphique, choix des thèmes, couleurs et papiers en fonction du cahier des charges</p>
+
+<div class="labelsPictures row"></div>
+<img class="col-6" src="assets/images/etiq/CSBR_AVENIR_RG-ecrase.jpg" alt="Avenir">
+<img class="col-6" src="assets/images/etiq/CSBR_SALUT_TERRE_RG-ecrase.jpg" alt="Salut de la Terre">
