--- a/src/app/components/packaging/packaging.component.html
+++ b/src/app/components/packaging/packaging.component.html
@@ -17,7 +17,7 @@
       <a (click)="setTitle('ADCreativ - Cartons')" 
       routerLink="cardboardPack">
         <div class="content-overlay"></div>
-        <img class="content-image" src="https://images.unsplash.com/photo-1433360405326-e50f909805b3?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=359e8e12304ffa04a38627a157fc3362">
+        <img class="content-image" src="assets/images/carton/carton-rhonea.jpg" alt="Rhonea">
         <div class="content-details fadeIn-bottom fadeIn-left">
           <h4 class="content-title">Cartons</h4>
         </div>
