--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,12 +22,13 @@ body {
         font-family: Arial, Helvetica, sans-serif;
         height: 100%;
 
-        a {
+        p {
+            cursor: pointer;
             color: black;
             font-size: 20px;
         }
         
-        a:hover {
+        p:hover {
             text-decoration: none;
             color: white;
         }
