--- a/src/app/components/packaging/bottles/bottles.component.html
+++ b/src/app/components/packaging/bottles/bottles.component.html
@@ -1,8 +1,8 @@
 <h3>Création d'étiquettes de vin</h3>
 
-<h5>Castelbarry</h5>
+<h5>Terrasses du Larzac</h5>
 
-<p>Conception de la charte graphique, choix des thèmes, couleurs et papiers en fonction du cahier des charges</p>
+<p>Conception de la charte graphique, choix des thèmes, couleurs et papiers en fonction du cahier des charges pour la coopérative <a href="https://montpeyroux.org/" target="_blank">Castelbarry</a></p>
 
 <div class="labelsPictures row"></div>
 <img class="col-6" src="assets/images/etiq/CSBR_AVENIR_RG-ecrase.jpg" alt="Avenir">
