changement page accueil

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
+<div class="container-fluid" id="bgDiv">
 <ng-sidebar-container (onBackdropClicked)="_onBackdropClicked()">
  
     <!-- A sidebar -->
     <ng-sidebar [(opened)]="_opened"
-    [mode]="_MODES[_modeNum]"
+    mode="over"
     [keyClose]="_keyClose"
     position="right"
     [dock]="_dock"
@@ -27,12 +28,13 @@
     </button>
 
     <ul class="nav flex-column">
-      <li class="nav-item"><p (click)="setTitle('ADCreativ - Qui suis-je?')" 
-        routerLink="aboutMe">Qui suis-je?</p></li>
       <li class="nav-item"><p (click)="setTitle('ADCreativ - Références')" 
         routerLink="clients">Références</p></li>
       <li class="nav-item"><p (click)="setTitle('ADCreativ - Contact')" 
         routerLink="contact">Contact</p></li>
+      <li class="nav-item"><p (click)="setTitle('ADCreativ - Mentions légales')" 
+          routerLink="legalNotice">Mentions légales</p></li>
+
     </ul>
 
         
@@ -53,7 +55,7 @@
     </div>
 
   </ng-sidebar-container>
-
+</div>
 
 
 
