--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,6 @@
 <footer>
-<a routerLink="legalNotice">Mentions légales</a>
+<!-- <a routerLink="legalNotice">Mentions légales</a> -->
+<p><sup>&copy;</sup>Alexandra Diaz - {{currentYear}}</p>
 <a href="https://www.facebook.com/alexandra.diaz.39982631?fref=pymk_rhc" target= "_blankq"><img id="facebook" src="assets/images/facebook.svg" alt="Facebook icon"></a>
 <img id="instagram" src="assets/images/instagram.svg" alt="Instagram icon">
 </footer>
