--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,7 +1,17 @@
-header {
-background: #100c08;
-}
-
-.sidebar {
+.logo {
+    margin-left: 20px;
+    margin-top: 20px;
     cursor: pointer;
 }
+
+.row {
+    padding-top: 40px;
+}
+
+// h1 {
+//     padding-left: 30px;
+// }
+
+// .sidebar {
+//     cursor: pointer;
+// }
