--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<section>
+<!-- <section>
 <div class="container">
   <div class="content">
     <a routerLink="packaging/bottles">
@@ -46,4 +46,11 @@
     </a>
   </div>
 </div>
-</section>
+</section> -->
+
+<h1 class="display-4">Alexandra Diaz
+  <br>
+    <small class="text-muted">Designer packaging et communication</small>
+  </h1>
+
+<p>Raconter une histoire, traduire l'expression authentique du produit, sa carte d'identité, telle est ma philosophie de travail. Créatrice spécialisée dans le packaging depuis {{ experience }} ans, je suis à votre service pour donner une identité visuelle à vos projets.</p>
