--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -3,21 +3,15 @@ footer {
     width: 100%;
     padding-top: 40px;
     height: 90px;
-    background: #100c08;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     gap: 15px;
   }
 
-  a {
+  p {
     color:#696969;
     font-size: 20px;
-}
-
-a:hover {
-    text-decoration: none;
-    color: white;
 }
 
   #facebook {
