--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,14 +1,14 @@
 <header>
 <div class="row">
   <div class="logo col-2">
-    <img src="assets\images\logo_200px.jpg" alt="Logo">
+    <a routerLink="home" (click)="changeBGtoImage($event)"><img src="assets\images\logo_ad-creativ_white.svg" alt="Logo"></a>
   </div>
-  <h1 class="display-4">Alexandra Diaz
+  <!-- <h1 class="display-4">Alexandra Diaz
   <br>
     <small class="text-muted">Designer packaging et communication</small>
-  </h1>
-</div>
-  <div class="nav">
+  </h1> -->
+  <div class="nav col-8">
     <app-nav></app-nav>
   </div>
+</div>
 </header>
