--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,107 +1,119 @@
-@import url(https://fonts.googleapis.com/css?family=Raleway);
+// @import url(https://fonts.googleapis.com/css?family=Raleway);
 
-*, *:before, *:after{
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing:border-box;
-  box-sizing: border-box;
+// *, *:before, *:after{
+//   margin: 0;
+//   padding: 0;
+//   -webkit-box-sizing: border-box;
+//   -moz-box-sizing:border-box;
+//   box-sizing: border-box;
+// }
+
+// section{
+//     background: #080c10;
+//     font-size: 16px;
+//     font-family: 'Raleway', sans-serif;
+// }
+
+// .container{
+//   padding: 1em 0;
+//   float: left;
+//   width: 50%;
+// }
+// @media screen and (max-width: 640px){
+//   .container{
+//     display: block;
+//     width: 100%;
+//   }
+// }
+
+// @media screen and (min-width: 900px){
+//   .container{
+//     width: 25%;
+//   }
+// }
+
+// .content {
+//   position: relative;
+//   width: 90%;
+//   max-width: 400px;
+//   margin: auto;
+//   overflow: hidden;
+// }
+
+// .content .content-overlay {
+//   background: rgba(0,0,0,0.7);
+//   position: absolute;
+//   height: 99%;
+//   width: 100%;
+//   left: 0;
+//   top: 0;
+//   bottom: 0;
+//   right: 0;
+//   opacity: 0;
+//   -webkit-transition: all 0.4s ease-in-out 0s;
+//   -moz-transition: all 0.4s ease-in-out 0s;
+//   transition: all 0.4s ease-in-out 0s;
+// }
+
+// .content:hover .content-overlay{
+//   opacity: 1;
+// }
+
+// .content-image{
+//   width: 100%;
+// }
+
+// .content-details {
+//   position: absolute;
+//   text-align: center;
+//   padding-left: 1em;
+//   padding-right: 1em;
+//   width: 100%;
+//   top: 50%;
+//   left: 50%;
+//   opacity: 0;
+//   -webkit-transform: translate(-50%, -50%);
+//   -moz-transform: translate(-50%, -50%);
+//   transform: translate(-50%, -50%);
+//   -webkit-transition: all 0.3s ease-in-out 0s;
+//   -moz-transition: all 0.3s ease-in-out 0s;
+//   transition: all 0.3s ease-in-out 0s;
+// }
+
+// .content:hover .content-details{
+//   top: 50%;
+//   left: 50%;
+//   opacity: 1;
+// }
+
+// .content-details h4{
+//   color: #fff;
+//   font-weight: 500;
+//   letter-spacing: 0.15em;
+//   margin-bottom: 0.5em;
+// }
+
+// .content-details p{
+//   color: #fff;
+//   font-size: 0.8em;
+// }
+
+// .fadeIn-bottom{
+//   top: 80%;
+// }
+
+// .fadeIn-left{
+//   left: 20%;
+// }
+
+h1 {
+  padding-top: 30px;
 }
 
-section{
-    background: #080c10;
-    font-size: 16px;
-    font-family: 'Raleway', sans-serif;
-}
-
-.container{
-  padding: 1em 0;
-  float: left;
+p {
+  color: white;
+  font-size: 20px;
   width: 50%;
-}
-@media screen and (max-width: 640px){
-  .container{
-    display: block;
-    width: 100%;
-  }
-}
-
-@media screen and (min-width: 900px){
-  .container{
-    width: 25%;
-  }
-}
-
-.content {
-  position: relative;
-  width: 90%;
-  max-width: 400px;
-  margin: auto;
-  overflow: hidden;
-}
-
-.content .content-overlay {
-  background: rgba(0,0,0,0.7);
-  position: absolute;
-  height: 99%;
-  width: 100%;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  opacity: 0;
-  -webkit-transition: all 0.4s ease-in-out 0s;
-  -moz-transition: all 0.4s ease-in-out 0s;
-  transition: all 0.4s ease-in-out 0s;
-}
-
-.content:hover .content-overlay{
-  opacity: 1;
-}
-
-.content-image{
-  width: 100%;
-}
-
-.content-details {
-  position: absolute;
-  text-align: center;
-  padding-left: 1em;
-  padding-right: 1em;
-  width: 100%;
-  top: 50%;
-  left: 50%;
-  opacity: 0;
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  -webkit-transition: all 0.3s ease-in-out 0s;
-  -moz-transition: all 0.3s ease-in-out 0s;
-  transition: all 0.3s ease-in-out 0s;
-}
-
-.content:hover .content-details{
-  top: 50%;
-  left: 50%;
-  opacity: 1;
-}
-
-.content-details h4{
-  color: #fff;
-  font-weight: 500;
-  letter-spacing: 0.15em;
-  margin-bottom: 0.5em;
-}
-
-.content-details p{
-  color: #fff;
-  font-size: 0.8em;
-}
-
-.fadeIn-bottom{
-  top: 80%;
-}
-
-.fadeIn-left{
-  left: 20%;
+  text-align: justify;
+  padding-top: 20px;
 }
