--- a/src/app/components/communication/communication.component.html
+++ b/src/app/components/communication/communication.component.html
@@ -16,7 +16,7 @@
     <div class="content">
       <a routerLink="logos">
         <div class="content-overlay"></div>
-        <img class="content-image" src="https://images.unsplash.com/photo-1433360405326-e50f909805b3?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=359e8e12304ffa04a38627a157fc3362">
+        <img class="content-image" src="assets/images/LOGOS/Logo-Marouette.png" alt="Logo Marouette">
         <div class="content-details fadeIn-bottom fadeIn-left">
           <h4 class="content-title">Logos</h4>
         </div>
@@ -28,7 +28,7 @@
     <div class="content">
       <a routerLink="POSDisplay">
         <div class="content-overlay"></div>
-        <img class="content-image" src="https://images.unsplash.com/photo-1433360405326-e50f909805b3?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=359e8e12304ffa04a38627a157fc3362">
+        <img class="content-image" src="assets/images/PLV/Kakemono-Terroir.jpg" alt="Kakemono Terroir">
         <div class="content-details fadeIn-bottom fadeIn-left">
           <h4 class="content-title">PLV</h4>
         </div>
@@ -40,7 +40,7 @@
     <div class="content">
       <a routerLink="printAdvert">
         <div class="content-overlay"></div>
-        <img class="content-image" src="https://images.unsplash.com/photo-1433360405326-e50f909805b3?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=359e8e12304ffa04a38627a157fc3362">
+        <img class="content-image" src="assets/images/PUB/Pub-BIODIS.jpg" alt="Publicité Biodis">
         <div class="content-details fadeIn-bottom fadeIn-left">
           <h4 class="content-title">Pubs</h4>
         </div>
