--- a/src/app/components/error404/error404.component.html
+++ b/src/app/components/error404/error404.component.html
@@ -1,3 +1,3 @@
 <h4>Page 404</h4>
 
-<p>Page inexistante, retour à <span routerLink="home">l'accueil</span>.</p>
+<p>Page inexistante, retour à <a routerLink="home">l'accueil</a>.</p>
