--- a/src/app/components/packaging/boxes/boxes.component.html
+++ b/src/app/components/packaging/boxes/boxes.component.html
@@ -1,3 +1,23 @@
-<p>
-  boxes works!
-</p>
+<h2>Création d'étiquettes de vin</h2>
+
+<h4>Montpeyroux</h4>
+
+<div class="box">
+<p>Conception de la charte graphique, choix des thèmes, couleurs et papiers en fonction du cahier des charges pour la coopérative <a href="https://montpeyroux.org/" target="_blank">Castelbarry</a></p>
+
+<img class="img-fluid" src="assets/images/etiq/CSBR_AVENIR_RG-ecrase.jpg" alt="Avenir">
+<img class="img-fluid" src="assets/images/etiq/CSBR_SALUT_TERRE_RG-ecrase.jpg" alt="Salut de la Terre">
+</div>
+
+
+<h4>Saint-Jean d'Aumières</h4>
+
+<div class="box">
+<img class="img-fluid" src="assets/images/etiq/jc_affranchis_rg.jpg" alt="L'affranchi">
+<img class="img-fluid" src="assets/images/etiq/jc_arnacoeur_rs.jpg" alt="L'arnacoeur">
+
+<p>Conception de l'étiquette avec l'insertion de gravure dorée et choix du format de la bouteille à la demande du château <a href="https://saintjeandaumieres.com/" target="_blank">Saint-Jean d'Aumières</a></p>
+</div>
+
+
+
