--- a/src/app/components/packaging/bottles/bottles.component.scss
+++ b/src/app/components/packaging/bottles/bottles.component.scss
@@ -19,12 +19,27 @@ img {
     height: 300px;
     width: auto;
     padding-right: 40px;
-    transition: transform 0.5s ease;
-    cursor: zoom-in;
 }
 
 img:hover {
    transform: scale(3) translate(40px);
+}
+
+.montpeyroux {
+    transition: transform 0.5s ease;
+    cursor: zoom-in;
+    
+    &:hover {
+        transform: scale(3) translate(-40px);
+    }
+}
+.aumieres {
+    transition: transform 0.5s ease;
+    cursor: zoom-in;
+    
+    &:hover {
+        transform: scale(3) translate(40px);
+    }
 }
 
 .box {
