--- a/src/app/components/packaging/boxes/boxes.component.scss
+++ b/src/app/components/packaging/boxes/boxes.component.scss
@@ -19,6 +19,12 @@ img {
     height: 300px;
     width: auto;
     padding-right: 40px;
+    transition: transform 0.5s ease;
+    cursor: zoom-in;
+}
+
+img:hover {
+   transform: scale(3) translate(40px);
 }
 
 .box {
