--- a/src/app/components/packaging/boxes/boxes.component.html
+++ b/src/app/components/packaging/boxes/boxes.component.html
@@ -1,22 +1,20 @@
 <h2>Création d'étiquettes de vin</h2>
 
-<h4>Montpeyroux</h4>
+<h4>Rhonéa</h4>
 
 <div class="box">
-<p>Conception de la charte graphique, choix des thèmes, couleurs et papiers en fonction du cahier des charges pour la coopérative <a href="https://montpeyroux.org/" target="_blank">Castelbarry</a></p>
+<p>Conception du format des cartons, commande et suivi de production auprès de l'imprimerie pour la coopérative <a href="https://www.rhonea.fr/" target="_blank">Rhonéa</a></p>
 
-<img class="img-fluid" src="assets/images/etiq/CSBR_AVENIR_RG-ecrase.jpg" alt="Avenir">
-<img class="img-fluid" src="assets/images/etiq/CSBR_SALUT_TERRE_RG-ecrase.jpg" alt="Salut de la Terre">
+<img class="img-fluid" src="assets/images/carton/carton-rhonea.jpg" alt="Carton Rhonéa">
 </div>
 
 
-<h4>Saint-Jean d'Aumières</h4>
+<h4>Daronton</h4>
 
 <div class="box">
-<img class="img-fluid" src="assets/images/etiq/jc_affranchis_rg.jpg" alt="L'affranchi">
-<img class="img-fluid" src="assets/images/etiq/jc_arnacoeur_rs.jpg" alt="L'arnacoeur">
+<img class="img-fluid" src="assets/images/carton/carton-daronton.jpg" alt="Carton Daronton">
 
-<p>Conception de l'étiquette avec l'insertion de gravure dorée et choix du format de la bouteille à la demande du château <a href="https://saintjeandaumieres.com/" target="_blank">Saint-Jean d'Aumières</a></p>
+<p>Conception du graphisme et choix de la typographie des cartons à la demande du <a href="http://www.terroirdaronton.fr/" target="_blank">Terroir Daronton</a></p>
 </div>
 
 
