--- a/src/app/components/packaging/cardboard-pack/cardboard-pack.component.html
+++ b/src/app/components/packaging/cardboard-pack/cardboard-pack.component.html
@@ -1,3 +1,18 @@
-<p>
-  cardboard-pack works!
-</p>
+<h2>Création de cartons pour les bouteilles</h2>
+
+<h4>Rhonéa</h4>
+
+<div class="box">
+<p>Conception du format des cartons, commande et suivi de production auprès de l'imprimerie pour la coopérative <a href="https://www.rhonea.fr/" target="_blank">Rhonéa</a></p>
+
+<img class="img-fluid rhonea" src="assets/images/carton/carton-rhonea.jpg" alt="Carton Rhonéa">
+</div>
+
+
+<h4>Daronton</h4>
+
+<div class="box">
+<img class="img-fluid daronton" src="assets/images/carton/carton-daronton.jpg" alt="Carton Daronton">
+
+<p>Conception du graphisme et choix de la typographie des cartons à la demande du <a href="http://www.terroirdaronton.fr/" target="_blank">Terroir Daronton</a></p>
+</div>
