--- a/src/app/components/packaging/boxes/boxes.component.html
+++ b/src/app/components/packaging/boxes/boxes.component.html
@@ -1,18 +1,18 @@
 <h2>Création d'étiquettes de vin</h2>
 
-<h4>Rhonéa</h4>
+<h4>Castelcubi</h4>
 
 <div class="box">
-<p>Conception du format des cartons, commande et suivi de production auprès de l'imprimerie pour la coopérative <a href="https://www.rhonea.fr/" target="_blank">Rhonéa</a></p>
+<p>Conception du format et du graphisme des cubis de vin, choix des couleurs pour la coopérative <a href="https://www.rhonea.fr/" target="_blank">Rhonéa</a></p>
 
-<img class="img-fluid" src="assets/images/carton/carton-rhonea.jpg" alt="Carton Rhonéa">
+<img class="img-fluid castelcubi" src="assets/images/bib/castecubi10rg_.png" alt="Castelcubi">
 </div>
 
 
-<h4>Daronton</h4>
+<h4>Les Coopains</h4>
 
 <div class="box">
-<img class="img-fluid" src="assets/images/carton/carton-daronton.jpg" alt="Carton Daronton">
+<img class="img-fluid coopains" src="assets/images/bib/Castelbarry-BIB-3L-Les-Coopains.jpg" alt="Les Coopains">
 
 <p>Conception du graphisme et choix de la typographie des cartons à la demande du <a href="http://www.terroirdaronton.fr/" target="_blank">Terroir Daronton</a></p>
 </div>
