lien insta et correction titre boxes

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,7 @@
 <footer>
 <!-- <a routerLink="legalNotice">Mentions légales</a> -->
 <p><sup>&copy;</sup>Alexandra Diaz - {{currentYear}}</p>
-<a href="https://www.facebook.com/alexandra.diaz.39982631?fref=pymk_rhc" target= "_blankq"><img id="facebook" src="assets/images/facebook.svg" alt="Facebook icon"></a>
-<img id="instagram" src="assets/images/instagram.svg" alt="Instagram icon">
+<a href="https://www.facebook.com/alexandra.diaz.39982631?fref=pymk_rhc" target= "_blank"><img id="facebook" src="assets/images/facebook.svg" alt="Facebook icon"></a>
+<a href="https://www.instagram.com/namastalex/?hl=fr" target= "_blank"><img id="instagram" src="assets/images/instagram.svg" alt="Instagram icon"></a>
+
 </footer>
