--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div class="container-fluid" id="bgDiv">
+  <figure></figure>
+	<figure></figure>
+	<figure></figure>
 <ng-sidebar-container (onBackdropClicked)="_onBackdropClicked()">
  
     <!-- A sidebar -->
