--- a/src/app/components/packaging/olive-oil/olive-oil.component.html
+++ b/src/app/components/packaging/olive-oil/olive-oil.component.html
@@ -1,3 +1,18 @@
-<p>
-  olive-oil works!
-</p>
+<h2>Création d'étiquettes d'huile d'olive</h2>
+
+<h4>Rhonéa</h4>
+
+<div class="box">
+<p>Conception du format et du graphisme d'étiquettes d'huile d'olive, choix des couleurs pour la coopérative <a href="https://www.rhonea.fr/" target="_blank">Rhonéa</a></p>
+
+<img class="img-fluid rhonea" src="assets/images/HO/Rhonea-HO-bouchon.png" alt="Huile d'Olive Rhonéa">
+</div>
+
+
+<h4>Château Saint Louis La Perdrix</h4>
+
+<div class="box">
+<img class="img-fluid perdrix" src="assets/images/HO/SLP-HO-50.png" alt="Huile d'Olive Saint Louis">
+
+<p>Conception du graphisme et choix de la typographie de l'étiquette de l'huile d'olive pour le Château <a href="https://saintlouislaperdrix.com/" target="_blank">Saint Louis La Perdrix</a></p>
+</div>
