--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,70 @@
+// @-webkit-keyframes changeBckg {
+//     0% {  background-image: url("src/assets/images/EfferveSens_Les-bourdeaux.jpg"); }
+//     50% { background-image: url("src/assets/images/Croix-de-felix_la_bastide_savary.jpg"); }
+//     100% {background-image: url("src/assets/images/Mass-de-Callas_Extrait-de-Lormarine.jpg"); }
+//   }
+  
+//   @keyframes changeBckg {
+//     0% { background-image: url("src/assets/images/EfferveSens_Les-bourdeaux.jpg"); }
+//     50% { background-image: url("src/assets/images/Croix-de-felix_la_bastide_savary.jpg"); }
+//     100% {background-image: url("src/assets/images/Mass-de-Callas_Extrait-de-Lormarine.jpg"); }
+//   }
+  
+//   .container-fluid {
+//     background-size: cover;
+//     margin: 0 auto;
+//     padding-right: 0px;
+//     -webkit-animation: changeBckg 8s ease infinite;
+//     animation: changeBckg 8s ease infinite;
+//   }
+
 .container-fluid {
-    background: url("src/assets/images/EfferveSens_Les-bourdeaux.jpg") #100c08;
+    background: #100c08;
+}
+
+.container-fluid > figure {
+    animation: imageAnimation 18s linear infinite 0s;
+    backface-visibility: hidden;
     background-size: cover;
-    margin: 0 auto;
-    padding-right: 0px;
+    background-position: center center;
+    color: transparent;
+    height: 100%;
+    left: 0px;
+    opacity: 0;
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    z-index: 0;
+  }
+
+  .container-fluid > figure:nth-child(1) { 
+      background-image: url('src/assets/images/EfferveSens_Les-bourdeaux.jpg'); }
+
+.container-fluid > figure:nth-child(2) {
+  animation-delay: 6s;
+  background-image: url('src/assets/images/Croix-de-felix_la_bastide_savary.jpg');
+}
+
+.container-fluid > figure:nth-child(3) {
+  animation-delay: 12s;
+  background-image: url('src/assets/images/Mass-de-Callas_Extrait-de-Lormarine.jpg');
+}
+
+@keyframes 
+imageAnimation {  0% {
+ animation-timing-function: ease-in;
+ opacity: 0;
+}
+ 33% {
+ animation-timing-function: ease-out;
+ opacity: 1;
+}
+ 66% {
+ opacity: 0
+}
+ 100% {
+ opacity: 0
+}
 }
 
 ng-sidebar-container {
