--- a/src/app/components/packaging/boxes/boxes.component.scss
+++ b/src/app/components/packaging/boxes/boxes.component.scss
@@ -22,16 +22,12 @@ img {
     padding-right: 40px;
 }
 
-img:hover {
-   transform: scale(3) translate(40px);
-}
-
 .castelcubi {
     transition: transform 0.5s ease;
     cursor: zoom-in;
     
     &:hover {
-        transform: scale(2) translate(-40px);
+        transform: translate(-40px) scale(2);
     }
 }
 .coopains {
@@ -39,7 +35,7 @@ img:hover {
     cursor: zoom-in;
     
     &:hover {
-        transform: scale(2) translate(40px);
+        transform: translate(40px) scale(2);
     }
 }
 
