--- a/src/app/components/packaging/cardboard-pack/cardboard-pack.component.scss
+++ b/src/app/components/packaging/cardboard-pack/cardboard-pack.component.scss
@@ -21,16 +21,12 @@ img {
     padding-right: 40px;
 }
 
-img:hover {
-   transform: scale(3) translate(40px);
-}
-
 .rhonea {
     transition: transform 0.5s ease;
     cursor: zoom-in;
     
     &:hover {
-        transform: scale(2) translate(-40px);
+        transform: translate(-40px) scale(2);
     }
 }
 .daronton {
@@ -38,7 +34,7 @@ img:hover {
     cursor: zoom-in;
     
     &:hover {
-        transform: scale(2) translate(40px);
+        transform: translate(40px) scale(2);
     }
 }
 
