images à la meme taille page packaging

--- a/src/app/components/packaging/boxes/boxes.component.html
+++ b/src/app/components/packaging/boxes/boxes.component.html
@@ -12,7 +12,7 @@
 <h4>Les Coopains</h4>
 
 <div class="box">
-<img class="img-fluid coopains" src="assets/images/bib/Castelbarry-BIB-3L-Les-Coopains.jpg" alt="Les Coopains">
+<img class="img-fluid coopains" src="assets/images/bib/Castelbarry-BIB-3L-Les-Coopains.png" alt="Les Coopains">
 
 <p>Conception du graphisme et choix de la typographie des cartons à la demande du <a href="http://www.terroirdaronton.fr/" target="_blank">Terroir Daronton</a></p>
 </div>
