--- a/src/app/components/packaging/cardboard-pack/cardboard-pack.component.html
+++ b/src/app/components/packaging/cardboard-pack/cardboard-pack.component.html
@@ -5,7 +5,7 @@
 <div class="box">
 <p>Conception du format des cartons, commande et suivi de production auprès de l'imprimerie pour la coopérative <a href="https://www.rhonea.fr/" target="_blank">Rhonéa</a></p>
 
-<img class="img-fluid rhonea" src="assets/images/carton/carton-rhonea.jpg" alt="Carton Rhonéa">
+<img class="img-fluid rhonea" src="assets/images/carton/carton-rhonea.png" alt="Carton Rhonéa">
 </div>
 
 
