--- a/src/app/components/packaging/packaging.component.html
+++ b/src/app/components/packaging/packaging.component.html
@@ -4,7 +4,7 @@
       <a (click)="setTitle('ADCreativ - Bouteilles')"
       routerLink="bottles">
         <div class="content-overlay"></div>
-        <img class="content-image" src="assets/images/etiq/la_bastide_savary.jpg" alt="La Bastide">
+        <img class="content-image" src="assets/images/etiq/bourdeaux.png" alt="La Bastide">
         <div class="content-details fadeIn-bottom fadeIn-left">
           <h4 class="content-title">Bouteilles</h4>
         </div>
@@ -17,7 +17,7 @@
       <a (click)="setTitle('ADCreativ - Cartons')" 
       routerLink="cardboardPack">
         <div class="content-overlay"></div>
-        <img class="content-image" src="assets/images/carton/carton-rhonea.jpg" alt="Rhonea">
+        <img class="content-image" src="assets/images/carton/carton-rhonea.png" alt="Rhonea">
         <div class="content-details fadeIn-bottom fadeIn-left">
           <h4 class="content-title">Cartons</h4>
         </div>
@@ -30,7 +30,7 @@
       <a (click)="setTitle('ADCreativ - Bibs')"
       routerLink="boxes">
         <div class="content-overlay"></div>
-        <img class="content-image" src="assets/images/bib/col_du_vent_bib.jpg" Alt="Col du Vent">
+        <img class="content-image" src="assets/images/bib/col_du_vent_bib.png" Alt="Col du Vent">
         <div class="content-details fadeIn-bottom fadeIn-left">
           <h4 class="content-title">Bibs</h4>
         </div>
