--- a/src/app/components/clients/clients.component.scss
+++ b/src/app/components/clients/clients.component.scss
@@ -11,3 +11,12 @@ table {
         padding-right: 20px;
     }
 }
+
+img {
+    width: 100px;
+    height: auto;
+    margin-right: 100px;
+    margin-left: 100px;
+    margin-bottom: 30px;
+    border-radius: 5px;
+}
