--- a/src/app/components/error404/error404.component.scss
+++ b/src/app/components/error404/error404.component.scss
@@ -1,6 +1,19 @@
+h4 {
+    color: white;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+p {
+    font-size: 20px;
+    color: white;
+}
+
 a {
+    font-size: 20px;
+    color: white;
     cursor: pointer;
 
 &:hover {
-    color: white;
+    color: #999;
 }}
