--- a/src/app/components/communication/communication.component.html
+++ b/src/app/components/communication/communication.component.html
@@ -28,7 +28,7 @@
     <div class="content">
       <a routerLink="POSDisplay">
         <div class="content-overlay"></div>
-        <img class="content-image" src="assets/images/PLV/Kakemono-Terroir.jpg" alt="Kakemono Terroir">
+        <img class="content-image" src="assets/images/PLV/Kakemono-Terroir2.jpg" alt="Kakemono Terroir">
         <div class="content-details fadeIn-bottom fadeIn-left">
           <h4 class="content-title">PLV</h4>
         </div>
@@ -40,7 +40,7 @@
     <div class="content">
       <a routerLink="printAdvert">
         <div class="content-overlay"></div>
-        <img class="content-image" src="assets/images/PUB/Pub-BIODIS.jpg" alt="Publicité Biodis">
+        <img class="content-image" src="assets/images/PUB/Pub-BIODIS.png" alt="Publicité Biodis">
         <div class="content-details fadeIn-bottom fadeIn-left">
           <h4 class="content-title">Pubs</h4>
         </div>
