--- a/src/app/components/communication/communication.component.html
+++ b/src/app/components/communication/communication.component.html
@@ -16,7 +16,7 @@
     <div class="content">
       <a routerLink="logos">
         <div class="content-overlay"></div>
-        <img class="content-image" src="assets/images/LOGOS/Logo-Marouette.png" alt="Logo Marouette">
+        <img class="content-image" src="assets/images/LOGOS/Logo-Pams.png" alt="Logo Pam's">
         <div class="content-details fadeIn-bottom fadeIn-left">
           <h4 class="content-title">Logos</h4>
         </div>
