--- a/src/app/components/error404/error404.component.html
+++ b/src/app/components/error404/error404.component.html
@@ -1,3 +1,3 @@
 <h4 class="display-4">Page inexistante</h4>
 
-<p>Retour à <a routerLink="home">l'accueil</a>.</p>
+<p>Retour à <a routerLink="/home">l'accueil</a>.</p>
