pages logos et PLV

--- a/src/app/components/communication/logos/logos.component.html
+++ b/src/app/components/communication/logos/logos.component.html
@@ -1,3 +1,44 @@
-<p>
-  logos works!
-</p>
+<h2>Création de logos</h2>
+
+<h4>Pams</h4>
+
+<div class="box">
+<p>Conception de l'identité visuelle, choix des couleurs et de la typographie du logo pour le mas <a href="https://www.tripadvisor.fr/Restaurant_Review-g1006582-d4590002-Reviews-Le_Pam_s-Port_Vendres_Pyrenees_Orientales_Occitanie.html" target="_blank">Le Pam's</a></p>
+
+<input type="checkbox" id="zoomPams">
+  <label for="zoomPams">
+<img class="img-fluid pams" src="assets/images/LOGOS/Logo-Pams.png" alt="Logo Mas Le Pam's">
+</label>
+</div>
+
+
+<h4>Saint-Jean d'Aumières</h4>
+
+<div class="box">
+  <input type="checkbox" id="zoomAumieres">
+  <label for="zoomAumieres">
+    <img class="img-fluid aumieres" src="assets/images/LOGOS/Logo-SJA.png" alt="Logo Saint-Jean d'Aumières">
+  </label>
+<p>Refonte du logo à la demande du château <a href="https://saintjeandaumieres.com/" target="_blank">Saint-Jean d'Aumières</a></p>
+</div>
+
+<h4>Emile et Rose</h4>
+
+<div class="box">
+<p>Conception du logo dans le respect de la charte graphique du domaine <a href="https://www.domainedemile-et-rose.fr/" target="_blank">Emile et Rose</a></p>
+
+<input type="checkbox" id="zoomEmileRose">
+  <label for="zoomEmileRose">
+    <img class="img-fluid emilerose" src="assets/images/LOGOS/Logo-Emile-Rose.png" alt="Logo du domaine Emile et Rose">
+  </label>
+</div>
+
+<h4>Domaine Roche</h4>
+
+<div class="box">
+  <input type="checkbox" id="zoomRoche">
+    <label for="zoomRoche">
+      <img class="img-fluid roche" src="assets/images/LOGOS/Logo-Roche.png" alt="Logo du domaine Roche">
+    </label>
+<p>Création du logo pour le <a href="http://www.domaineroche.fr/index.php/fr/" target="_blank">domaine Roche</a></p>
+</div>
