--- a/src/app/components/communication/posdisplay/posdisplay.component.html
+++ b/src/app/components/communication/posdisplay/posdisplay.component.html
@@ -1,3 +1,34 @@
-<p>
-  posdisplay works!
-</p>
+<h2>Création de publicités sur lieu de vente</h2>
+
+<h4>Terroir Daronton</h4>
+
+<div class="box">
+<p>Conception d'une affiche au format 85cm pour le stand du <a href="http://www.terroirdaronton.fr/" target="_blank">Terroir Daronton</a></p>
+
+<input type="checkbox" id="zoomDaronton">
+  <label for="zoomDaronton">
+<img class="img-fluid daronton" src="assets/images/PLV/Kakemono-Terroir1.jpg" alt="Kakemono Terroir Daronton">
+</label>
+</div>
+
+
+<h4>Castelbarry</h4>
+
+<div class="box">
+  <input type="checkbox" id="zoomCastel">
+  <label for="zoomCastel">
+    <img class="img-fluid castelbarry" src="assets/images/PLV/Castelbarry-general.png" alt="Affiche Castelbarry">
+  </label>
+<p>Conception d'une affiche au format 160x60cm pour le stand de la coopérative <a href="https://montpeyroux.org/" target="_blank">Castelbarry</a></p>
+</div>
+
+<h4>Rhonéa</h4>
+
+<div class="box">
+<p>Création d'un panneau publicitaire pour la coopérative <a href="https://www.rhonea.fr/" target="_blank">Rhonéa</a></p>
+
+<input type="checkbox" id="zoomRhonea">
+  <label for="zoomRhonea">
+    <img class="img-fluid rhonea" src="assets/images/PLV/Rhonea-Kakemono.png" alt="Kakemono Rhonéa">
+  </label>
+</div>
