--- a/src/app/components/legal-notice/legal-notice.component.html
+++ b/src/app/components/legal-notice/legal-notice.component.html
@@ -3,4 +3,4 @@
 <p>Responsable : Alexandra Diaz</p>
 <p>Adresse : 30, rue des Crocus - 34070 Montpellier</p>
 <p>Tél : 06 64 93 77 10</p>
-<p>Email : alexandra@ad-creativ.com</p>
+<p>Email : <a href="mailto:alexandra@ad-creativ.com">alexandra@ad-creativ.com</a></p>
