trad paths et page pubs

--- a/src/app/components/communication/communication.component.html
+++ b/src/app/components/communication/communication.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="content">
       <a (click)="setTitle('ADCreativ - Plaquettes')"
-      routerLink="leaflets">
+      routerLink="plaquettes">
         <div class="content-overlay"></div>
         <img class="content-image" src="assets/images/plaquette/Chabanon.jpg" alt="Plaquette du domaine Alain Chabanon">
         <div class="content-details fadeIn-bottom fadeIn-left">
@@ -14,7 +14,8 @@
   
   <div class="container">
     <div class="content">
-      <a routerLink="logos">
+      <a (click)="setTitle('ADCreativ - Logos')" 
+      routerLink="logos">
         <div class="content-overlay"></div>
         <img class="content-image" src="assets/images/LOGOS/Logo-Pams.png" alt="Logo Pam's">
         <div class="content-details fadeIn-bottom fadeIn-left">
@@ -26,7 +27,8 @@
   
   <div class="container">
     <div class="content">
-      <a routerLink="POSDisplay">
+      <a (click)="setTitle('ADCreativ - PLV')"
+      routerLink="PLV">
         <div class="content-overlay"></div>
         <img class="content-image" src="assets/images/PLV/Kakemono-Terroir2.jpg" alt="Kakemono Terroir">
         <div class="content-details fadeIn-bottom fadeIn-left">
@@ -38,9 +40,10 @@
   
   <div class="container">
     <div class="content">
-      <a routerLink="printAdvert">
+      <a (click)="setTitle('ADCreativ - Pubs')"
+      routerLink="pubs">
         <div class="content-overlay"></div>
-        <img class="content-image" src="assets/images/PUB/Pub-BIODIS.png" alt="Publicité Biodis">
+        <img class="content-image" src="assets/images/PUB/Facebook-Castelbarry.jpg" alt="Publicité Facebook Castelbarry">
         <div class="content-details fadeIn-bottom fadeIn-left">
           <h4 class="content-title">Pubs</h4>
         </div>
