--- a/src/app/components/packaging/packaging.component.html
+++ b/src/app/components/packaging/packaging.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="content">
       <a (click)="setTitle('ADCreativ - Bouteilles')"
-      routerLink="bottles">
+      routerLink="bouteilles">
         <div class="content-overlay"></div>
         <img class="content-image" src="assets/images/etiq/bourdeaux.png" alt="La Bastide">
         <div class="content-details fadeIn-bottom fadeIn-left">
@@ -15,7 +15,7 @@
   <div class="container">
     <div class="content">
       <a (click)="setTitle('ADCreativ - Cartons')" 
-      routerLink="cardboardPack">
+      routerLink="cartons">
         <div class="content-overlay"></div>
         <img class="content-image" src="assets/images/carton/carton-rhonea.png" alt="Rhonea">
         <div class="content-details fadeIn-bottom fadeIn-left">
@@ -28,7 +28,7 @@
   <div class="container">
     <div class="content">
       <a (click)="setTitle('ADCreativ - Bibs')"
-      routerLink="boxes">
+      routerLink="bibs">
         <div class="content-overlay"></div>
         <img class="content-image" src="assets/images/bib/col_du_vent_bib.png" Alt="Col du Vent">
         <div class="content-details fadeIn-bottom fadeIn-left">
@@ -41,7 +41,7 @@
   <div class="container">
     <div class="content">
       <a (click)="setTitle('ADCreativ - Huile d\'olive')"
-      routerLink="oliveOil">
+      routerLink="huiledolive">
         <div class="content-overlay"></div>
         <img class="content-image" src="assets/images/HO/Rhonea-HO-bouchon.png" alt="Huile d'olive">
         <div class="content-details fadeIn-bottom fadeIn-left">
