--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,12 +29,12 @@
     </button>
 
     <ul class="nav flex-column">
-      <li class="nav-item"><p (click)="setTitle('ADCreativ - Références')" 
-        (click)="changeBGtoBrown($event)" routerLink="clients" closeSidebar>Références</p></li>
+      <li class="nav-item"><p (click)="setTitle('ADCreativ - Clients')" 
+        (click)="changeBGtoBrown($event)" routerLink="clients" closeSidebar>Clients</p></li>
       <li class="nav-item"><p (click)="setTitle('ADCreativ - Contact')" 
         (click)="changeBGtoBrown($event)" routerLink="contact" closeSidebar>Contact</p></li>
       <li class="nav-item"><p (click)="setTitle('ADCreativ - Mentions légales')" 
-        (click)="changeBGtoBrown($event)" routerLink="legalNotice" closeSidebar>Mentions légales</p></li>
+        (click)="changeBGtoBrown($event)" routerLink="mentionslegales" closeSidebar>Mentions légales</p></li>
 
     </ul>
 
